# polymarket

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
src/polybot/: __init__.py  cli.py  config.py  logsetup.py
src/polybot/data/: clob.py  dataapi.py  gamma.py  models.py
src/polybot/execution/: base.py  live.py  paper.py
src/polybot/llm/: client.py  news_signal.py
src/polybot/notify/: telegram.py
src/polybot/paper/: engine.py  metrics.py  sizing.py  storage.py  strategy.py
src/polybot/screener/: stage0.py
src/polybot/whale/: analyzer.py
tests/: test_execution.py  test_gamma.py  test_llm.py  test_paper.py  test_screener.py  test_telegram.py  test_whale.py
