[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polybot"
version = "0.1.0"
description = "Automated analysis + LLM betting bot for Polymarket (paper-trading MVP)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
live = [
    "py-clob-client-v2",
]

[project.scripts]
polybot = "polybot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polybot"]
